[gd_scene load_steps=18 format=3 uid="uid://doxd5r1enxvdu"]

[ext_resource type="Script" path="res://UI/dialogue_box/dialogue_control.gd" id="1_hpg2w"]
[ext_resource type="Texture2D" uid="uid://c7gtgk3e5nui1" path="res://UI/dialogue_box/seta.png" id="2_imbex"]
[ext_resource type="Texture2D" uid="uid://782j2e384yo" path="res://UI/dialogue_box/hand_small.png" id="2_ke2yr"]
[ext_resource type="Texture2D" uid="uid://cr8ragjg8xlq0" path="res://UI/dialogue_box/seta_click.png" id="3_o8qb0"]
[ext_resource type="Texture2D" uid="uid://dw5fucwop5gn3" path="res://UI/dialogue_box/seta_over.png" id="4_vvdr1"]
[ext_resource type="AudioStream" uid="uid://inlx2uqucffe" path="res://sfx/184447__nickreffin__cartoon-phone-voice.mp3" id="6_jffq8"]
[ext_resource type="AudioStream" uid="uid://cd4n0l5n511w7" path="res://sfx/476816__victorium183__menuchange.wav" id="7_d08ns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u5wh"]
bg_color = Color(0.870588, 0.870588, 0.870588, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="Gradient" id="Gradient_4am4i"]
colors = PackedColorArray(0, 0, 0, 1, 0.382332, 0.322645, 0.242578, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nwa3l"]
gradient = SubResource("Gradient_4am4i")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3ex1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2m8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drr6i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uquoh"]

[sub_resource type="Animation" id="Animation_jlwjh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer/LabelText/TextNext:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_chfxk"]
resource_name = "text_next"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer/LabelText/TextNext:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oy3oc"]
_data = {
"RESET": SubResource("Animation_jlwjh"),
"text_next": SubResource("Animation_chfxk")
}

[node name="DialogueControl" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-578, -650)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_hpg2w")
options_pointer = ExtResource("2_ke2yr")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.952941)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -272.0
offset_right = -18.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7u5wh")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Retrato" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture1D_nwa3l")
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelText" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
autowrap_mode = 2

[node name="TextNext" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer/LabelText"]
layout_mode = 2
offset_left = 834.0
offset_top = 113.0
offset_right = 866.0
offset_bottom = 163.0
rotation = 1.56587
texture = ExtResource("2_imbex")
expand_mode = 1

[node name="ItemList" type="ItemList" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/guide_color = Color(0.847059, 0, 0, 0)
theme_override_constants/h_separation = 1
theme_override_font_sizes/font_size = 35
theme_override_styles/panel = SubResource("StyleBoxEmpty_j3ex1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t2m8b")
theme_override_styles/selected = SubResource("StyleBoxEmpty_drr6i")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_uquoh")

[node name="TextureButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
modulate = Color(0.807843, 0.811765, 0.839216, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_imbex")
texture_pressed = ExtResource("3_o8qb0")
texture_hover = ExtResource("4_vvdr1")
ignore_texture_size = true
stretch_mode = 0

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="TalkAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jffq8")
volume_db = 8.0

[node name="OptionAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d08ns")
volume_db = -8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oy3oc")
}
autoplay = "text_next"

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
